# gist-sync

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: README.md  README.rst
examples/python/: some_example_gist.py  some_example_gist_output.txt
examples/sh/: some_example_gist.sh
src/gist_sync/: __init__.py  cli.py
src/repo_gist_sync/: __init__.py  cli.py  repo_gist_sync.py
