[metadata]
name = gist-sync
description = Library to sync git repository to Github Gists
version = 0.1
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
url = https://github.com/weeping-angel/gist-sync
author = Nishu Jain
author_email = nishujain1997.19@gmail.com
platforms = unix, linux, osx, win32, cygwin
description_file = README.rst
license = MIT
license_file = LICENSE

classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
package_dir =
    = src
packages = find: 
include_package_data=True
zip_safe = True
install_requires = 
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gistsync = gist_sync.cli:run
    gistdirsync = gist_sync.cli:dir_run